--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "jsx": "react",
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
+    "lib": ["es6"],
     "sourceMap": true,
     "types": ["jasmine"],
     "allowImportingTsExtensions": true
